--- a/02. PARTIE REGLEMENTAIRE/Article R5765-1 - 30515113.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5765-1 - 30515113.md
@@ -1,10 +1,10 @@
 # Article R5765-1
 
-Le chapitre Ier du titre Ier du présent livre est applicable en Nouvelle-Calédonie en tant qu'il concerne les compétences
-exercées par l'Etat.
+Le chapitre Ier du titre Ier du livre V est applicable en Nouvelle-Calédonie en tant qu'il concerne les compétences exercées
+par l'Etat.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2015-454 du 21 avril 2015 - art. 2
+	  - Décret n°2015-1575 du 3 décembre 2015 - art. 32
