--- a/02. PARTIE REGLEMENTAIRE/Article R5795-1 - 30515173.md
+++ b/02. PARTIE REGLEMENTAIRE/Article R5795-1 - 30515173.md
@@ -1,9 +1,9 @@
 # Article R5795-1
 
-Le chapitre Ier du titre Ier du présent livre est applicable aux Terres australes et antarctiques françaises.
+Le chapitre Ier du titre Ier du livre V est applicable aux Terres australes et antarctiques françaises.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2015-454 du 21 avril 2015 - art. 2
+	  - Décret n°2015-1575 du 3 décembre 2015 - art. 32
