--- a/01. PARTIE LEGISLATIVE/Article L5343-1 - 23080365.md
+++ b/01. PARTIE LEGISLATIVE/Article L5343-1 - 23080365.md
@@ -1,9 +1,7 @@
 # Article L5343-1
 
-Les ports maritimes de commerce dans lesquels l'organisation de la manutention portuaire comporte la présence d'une main-
-d'œuvre d'ouvriers dockers professionnels intermittents au sens des dispositions de l'article L. 5343-4 sont déterminés par
-l'autorité compétente après avis des organisations professionnelles les plus représentatives qui doivent se prononcer dans un
-délai d'un mois à compter de leur saisine.
+Dans les ports maritimes de commerce, les travaux de manutention portuaire sont réalisés par des ouvriers dockers, dans les
+conditions fixées au présent chapitre.
 
 **Liens relatifs à cet article**
 
@@ -20,13 +18,9 @@ délai d'un mois à compter de leur saisine.
 	  - Code des transports - art. R5343-1 (V)
 	  - Code des transports - art. R5343-2 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L511-1 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. L5343-4 (V)
+	  - Loi n°2015-1592 du 8 décembre 2015 - art. 1
 
 	**Codifié par**:
 
