--- a/01. PARTIE LEGISLATIVE/Article L5343-3 - 23080360.md
+++ b/01. PARTIE LEGISLATIVE/Article L5343-3 - 23080360.md
@@ -1,29 +1,34 @@
 # Article L5343-3
 
-Les dockers professionnels mensualisés concluent avec un employeur un contrat de travail à durée indéterminée. 
+Les ouvriers dockers professionnels mensualisés sont les ouvriers qui, afin d'exercer les travaux de manutention portuaire
+mentionnés à l'article L. 5343-7, concluent avec une entreprise ou avec un groupement d'entreprises un contrat de travail à
+durée indéterminée. 
 
-Les entreprises de manutention portuaire ou leurs groupements recrutent en priorité les ouvriers dockers professionnels
-mensualisés parmi les ouvriers dockers professionnels intermittents ou à défaut parmi les ouvriers dockers occasionnels qui
-ont régulièrement travaillé sur le port au cours des douze mois précédents. 
+Ce contrat de travail est régi par la convention collective nationale applicable aux entreprises de manutention portuaire. 
 
-Les ouvriers mensualisés conservent leur carte professionnelle et restent immatriculés au registre mentionné au 1° de
-l'article L. 5343-9 tant qu'ils demeurent liés par leur contrat de travail à durée indéterminée. 
+Les entreprises ou les groupements d'entreprises mentionnés au premier alinéa du présent article recrutent en priorité les
+ouvriers dockers professionnels mensualisés parmi les ouvriers dockers professionnels intermittents, s'il en reste sur le
+port, puis parmi les ouvriers dockers occasionnels qui ont régulièrement travaillé sur le port au cours des douze mois
+précédents. 
 
-Ils conservent leur carte professionnelle lorsque ce contrat de travail est rompu à l'issue de la période d'essai ou du fait
-d'un licenciement pour motif économique, si ce licenciement n'est pas suivi d'un reclassement ou s'il est suivi d'un
-reclassement dans un emploi d'ouvrier docker professionnel. 
+Les ouvriers dockers mensualisés issus de l'intermittence conservent leur carte professionnelle et restent immatriculés au
+registre mentionné au 1° de l'article L. 5343-9 tant qu'ils demeurent liés par le contrat de travail mentionné au premier
+alinéa du présent article. Ils conservent leur carte professionnelle lorsque ce contrat de travail est rompu à l'issue de la
+période d'essai ou du fait d'un licenciement pour motif économique, si ce licenciement n'est pas suivi d'un reclassement ou
+s'il est suivi d'un reclassement dans un emploi d'ouvrier docker professionnel. 
 
 Lorsque le licenciement intervient pour une autre cause, le bureau central de la main-d'œuvre, institué par l'article L.
-5343-8, décide, dans des conditions définies par voie réglementaire, si l'intéressé conserve sa carte professionnelle.
+5343-8, décide, dans des conditions définies par voie réglementaire, si l'intéressé conserve sa carte professionnelle ou non.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L511-2 (Ab), alinéa 5, paragraphe II
+	  - Loi n°2015-1592 du 8 décembre 2015 - art. 3
 
 	**Cité par**:
 
+	  - Code des transports - art. L5343-2 (V)
 	  - Code des transports - art. L5343-6 (V)
 	  - Code des transports - art. L5343-7-1 (V)
 	  - Code des transports - art. L5343-9 (V)
@@ -33,6 +38,7 @@ Lorsque le licenciement intervient pour une autre cause, le bureau central de la
 
 	**Cite**:
 
+	  - Code des transports - art. L5343-7 (V)
 	  - Code des transports - art. L5343-8 (V)
 
 	**Codifié par**:
