--- a/01. PARTIE LEGISLATIVE/Article L5343-6 - 23080354.md
+++ b/01. PARTIE LEGISLATIVE/Article L5343-6 - 23080354.md
@@ -1,16 +1,32 @@
 # Article L5343-6
 
-Les ouvriers dockers occasionnels constituent une main-d'œuvre d'appoint à laquelle il n'est fait appel qu'en cas
-d'insuffisance du nombre des dockers professionnels intermittents.
+Les ouvriers dockers occasionnels sont les ouvriers dockers qui, afin d'exercer les travaux de manutention portuaire
+mentionnés à l'article L. 5343-7 du présent code, concluent avec une entreprise ou avec un groupement d'entreprises un
+contrat de travail à durée déterminée en application du 3° de l'article L. 1242-2 du code du travail et régi par la
+convention collective nationale unifiée applicable aux entreprises de manutention portuaire. 
+
+Les ouvriers dockers occasionnels constituent pour les entreprises ou les groupements d'entreprises mentionnés au premier
+alinéa de l'article L. 5343-3 du présent code une main-d'œuvre d'appoint à laquelle il n'est fait appel qu'en cas
+d'insuffisance du nombre d'ouvriers dockers professionnels. 
+
+Cette main-d'œuvre d'appoint est employée dans le respect de l'article L. 1242-1 du code du travail et du principe de
+mensualisation posé à l'article L. 5343-3 du présent code. 
 
 Les ouvriers dockers occasionnels ne sont pas tenus de se présenter à l'embauche et peuvent travailler ailleurs que sur le
 port sans autorisation spéciale.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L511-5 (Ab)
+	  - Loi n°2015-1592 du 8 décembre 2015 - art. 5
+
+	**Cite**:
+
+	  - Code du travail - art. L1242-1
+	  - Code du travail - art. L1242-2
+	  - Code des transports - art. L5343-3
+	  - Code des transports - art. L5343-7
 
 	**Codifié par**:
 
