--- a/01. PARTIE LEGISLATIVE/Article L5343-8 - 23080346.md
+++ b/01. PARTIE LEGISLATIVE/Article L5343-8 - 23080346.md
@@ -1,7 +1,7 @@
 # Article L5343-8
 
-Il est institué dans chacun des ports mentionnés à l'article L. 5343-1 un organisme paritaire dénommé " bureau central de la
-main-d'œuvre du port ". 
+Il est institué dans chacun des ports         qui comportent la présence d'une main-d'œuvre d'ouvriers dockers professionnels
+intermittents un organisme paritaire dénommé " bureau central de la main-d'œuvre du port ". 
 
 Le bureau central de la main-d'œuvre comprend : 
 
@@ -21,19 +21,18 @@ main-d'œuvre.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L511-3 (Ab)
-
-	**Cite**:
-
-	  - Code des transports - art. L5343-1 (V)
-	  - Code des transports - art. L5343-9 (V)
+	  - Loi n°2015-1592 du 8 décembre 2015 - art. 8
 
 	**Cité par**:
 
-	  - Code des transports - art. L5343-3 (M)
+	  - Code des transports - art. L5343-3 (V)
 	  - Code des transports - art. L5343-5 (V)
+
+	**Cite**:
+
+	  - Code des transports - art. L5343-9
 
 	**Codifié par**:
 
