--- a/01. PARTIE LEGISLATIVE/Article L5343-2 - 23080362.md
+++ b/01. PARTIE LEGISLATIVE/Article L5343-2 - 23080362.md
@@ -6,17 +6,20 @@ Dans les ports mentionnés à l'article L. 5343-1, les ouvriers dockers sont :
 
 2° Les ouvriers dockers occasionnels. 
 
-Les ouvriers dockers professionnels sont soit mensualisés, soit intermittents.
+Les ouvriers dockers professionnels sont soit mensualisés, au sens de l'article L. 5343-3, soit intermittents, au sens de
+l'article L. 5343-4.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Code des ports maritimes - art. L511-2 (Ab), alinéas 1 à 4, paragraphe I
+	  - Loi n°2015-1592 du 8 décembre 2015 - art. 2
 
 	**Cite**:
 
-	  - Code des transports - art. L5343-1 (V)
+	  - Code des transports - art. L5343-1
+	  - Code des transports - art. L5343-3 (V)
+	  - Code des transports - art. L5343-4 (V)
 
 	**Cité par**:
 
