--- a/01. PARTIE LEGISLATIVE/Article L5343-4 - 23080358.md
+++ b/01. PARTIE LEGISLATIVE/Article L5343-4 - 23080358.md
@@ -1,21 +1,23 @@
 # Article L5343-4
 
-Les dockers professionnels intermittents sont les ouvriers dockers qui étaient titulaires de la carte professionnelle au 1er
-janvier 1992 et qui n'ont pas conclu de contrat de travail à durée indéterminée.
+Les ouvriers dockers professionnels intermittents sont les ouvriers dockers qui étaient titulaires de la carte
+professionnelle au 1er janvier 1992 et qui n'ont pas conclu de contrat de travail à durée indéterminée avec une entreprise de
+manutention portuaire ou avec un groupement d'entreprises de même objet.
 
-Le contrat de travail qui lie le docker professionnel intermittent à son employeur est conclu pour la durée d'une vacation ou
-pour une durée plus longue. Il est renouvelable.
+Le contrat de travail qui lie l'ouvrier docker  professionnel intermittent à son employeur est conclu pour la durée d'une
+vacation ou pour une durée plus longue. Il est renouvelable.
 
 **Liens relatifs à cet article**
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
-
-	**Anciens textes**:
-
-	  - Code des ports maritimes - art. L511-2 (Ab), alinéa 8, paragraphe III
+	  - Loi n°2015-1592 du 8 décembre 2015 - art. 4
 
 	**Cité par**:
 
 	  - Code des transports - art. L5343-1 (M)
+	  - Code des transports - art. L5343-2 (V)
+
+	**Codifié par**:
+
+	  - Ordonnance n°2010-1307 du 28 octobre 2010 - art. (V)
