--- a/01. PARTIE LEGISLATIVE/Article L5343-7 - 23080352.md
+++ b/01. PARTIE LEGISLATIVE/Article L5343-7 - 23080352.md
@@ -1,20 +1,31 @@
 # Article L5343-7
 
-Pour les travaux de manutention définis par voie réglementaire, les employeurs, lorsqu'ils n'utilisent pas uniquement des
-dockers professionnels mensualisés, ont recours en priorité aux dockers professionnels intermittents puis, à défaut, aux
-dockers occasionnels.
+Afin de garantir la sécurité des personnes et des biens, un décret en Conseil d'Etat détermine les travaux de chargement et
+de déchargement des navires et des bateaux dans les ports maritimes de commerce qui sont prioritairement effectués par des
+ouvriers dockers appartenant à l'une des catégories définies à l'article L. 5343-2. 
+
+Toutefois, les conditions dans lesquelles sont effectués les travaux de chargement et de déchargement des navires et des
+bateaux pour le compte propre d'un titulaire d'un titre d'occupation domaniale comportant le bord à quai sont fixées
+conformément à une charte nationale signée entre les organisations d'employeurs et de salariés représentatives du secteur de
+la manutention portuaire, les organisations représentatives des autorités portuaires et les organisations représentatives des
+utilisateurs de service de transport maritime ou fluvial.
 
 **Liens relatifs à cet article**
+
+	**Modifié par**:
+
+	  - Loi n°2015-1592 du 8 décembre 2015 - art. 6
 
 	**Cité par**:
 
 	  - Loi n°2015-1592 du 8 décembre 2015 - art. 9 (V)
+	  - Code des transports - art. L5343-3 (V)
 	  - Code des transports - art. L5343-6 (V)
 	  - Code des transports - art. R5343-2 (V)
 
-	**Anciens textes**:
+	**Cite**:
 
-	  - Code des ports maritimes - art. L511-2 (Ab), alinéa 9, paragraphe III
+	  - Code des transports - art. L5343-2
 
 	**Codifié par**:
 
