--- a/02. PARTIE REGLEMENTAIRE/Article D1214-6 - 28996379.md
+++ b/02. PARTIE REGLEMENTAIRE/Article D1214-6 - 28996379.md
@@ -1,6 +1,7 @@
 # Article D1214-6
 
-Le délai mentionné à l'article L. 1214-22 est de trois ans à compter de la modification du périmètre de transports urbains.
+Le délai mentionné à l'article L. 1214-22 est de trois ans à compter de la modification du   ressort territorial de
+l'autorité organisatrice de la mobilité.
 
 **Liens relatifs à cet article**
 
@@ -8,10 +9,10 @@ Le délai mentionné à l'article L. 1214-22 est de trois ans à compter de la m
 
 	  - Décret n°2014-530 du 22 mai 2014 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2014-530 du 22 mai 2014 - art.
+	  - Décret n°2015-1610 du 8 décembre 2015 - art. 5
 
 	**Cite**:
 
-	  - Code des transports - art. L1214-22 (V)
+	  - Code des transports - art. L1214-22
