--- a/01. PARTIE LEGISLATIVE/Article L1811-3 - 23084909.md
+++ b/01. PARTIE LEGISLATIVE/Article L1811-3 - 23084909.md
@@ -1,19 +1,33 @@
 # Article L1811-3
 
-En Guadeloupe, en Martinique et en Guyane, l'autorité organisatrice de transports unique est désignée, et le périmètre unique
-de transports délimité, par décret, après avis conforme du congrès des élus départementaux et régionaux, du conseil général
-et du conseil régional, délibérant dans les conditions prévues aux articles L. 5915-1 à L. 5915-3 du code général des
-collectivités territoriales.
+En Guadeloupe, l'autorité organisatrice de transports unique est désignée, et le périmètre unique de transports délimité, par
+décret, après avis conforme du congrès des élus départementaux et régionaux, du conseil départemental et du conseil régional,
+délibérant dans les conditions prévues aux articles L. 5915-1 à L. 5915-3 du code général des collectivités territoriales. 
+
+En Martinique et en Guyane, l'autorité organisatrice de transports unique est désignée et le périmètre unique de transports
+délimité par décret, après avis conforme de l'assemblée de la collectivité territoriale.
+
+**Nota:**
+
+Conformément à l'article 21 de la loi n° 2011-884 du 27 juillet 2011 modifié par le III de l'article 10 de la loi n° 2015-29
+du 16 janvier 2015, la présente loi entre en vigueur : 
+
+1° En ce qui concerne les dispositions applicables à la Guyane, à compter de la première réunion de l'assemblée de Guyane
+suivant sa première élection en décembre 2015, concomitamment au renouvellement des     conseils régionaux ; 
+
+2° En ce qui concerne les dispositions applicables à la Martinique, à compter de la première réunion de l'assemblée de
+Martinique suivant sa première élection en décembre 2015, concomitamment au renouvellement des     conseils régionaux.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°82-1153 du 30 décembre 1982 - art. 30-3 (VT), alinéa 2
+	  - Loi n°2011-884 du 27 juillet 2011 - art. 12
+	  - Loi n°2013-403 du 17 mai 2013 - art. 1 (V)
 
 	**Cite**:
 
-	  - Code général des collectivités territoriales - art. L5915-1 (V)
+	  - Code général des collectivités territoriales - art. L5915-1
 
 	**Codifié par**:
 
